--- a/html/.htaccess
+++ b/html/.htaccess
@@ -10,12 +10,10 @@ RewriteRule ^posts/index.php - [L]
 RewriteRule ^posts/assets/(.+[^/])$ posts/assets/?a=$1 [L]
 RewriteRule ^posts/(.+[^/])$ posts/?p=$1 [L]
 
-# prevent access to .git directory
-RedirectMatch 403 /\.git
 # prevent access to __partials, but allow access to css subdirectory
 RedirectMatch 403 "/__partials/.*html$"
 
 # Custom Error Responses
-ErrorDocument 403 /errors/access_denied.php
-ErrorDocument 404 /errors/not_found.php
-ErrorDocument 500 /errors/server_error.php
+ErrorDocument 403 /errors/403.php
+ErrorDocument 404 /errors/404.php
+ErrorDocument 500 /errors/500.php
