--- a/deploy/Vagrantfile
+++ b/deploy/Vagrantfile
@@ -4,10 +4,10 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
   config.vm.box = "ubuntu/trusty64"
   config.vm.hostname = "dronfelipe.dev"
   config.vm.network "private_network", ip: "192.168.50.4"
-  # config.vm.synced_folder "../html/", "/var/www/dronfelipe/html"
+  config.vm.synced_folder "../", "/var/www/dronfelipe"
 
   config.vm.provision :ansible do |ansible|
-    ansible.playbook = "playbook.yml"
+    ansible.playbook = "main.yml"
   end
 
 end
