--- a/deploy/main.yml
+++ b/deploy/main.yml
@@ -2,11 +2,12 @@
 - hosts: all
   sudo: true
   vars:
-    server_name: dronfelipe.dev
+    server_name: "default:80"
     repository_url: "https://github.com/kylebebak/dronfelipe.git"
     repository_root: /var/www/dronfelipe
     document_root: "{{ repository_root }}/html"
     mysql_root_password: root
+    production: false
 
   handlers:
     - name: reload apache
@@ -47,6 +48,8 @@
         dest={{ repository_root }}
         clone=yes
         update=no
+      when:
+        production
 
 
 
