--- a/deploy/main.yml
+++ b/deploy/main.yml
@@ -1,22 +1,13 @@
 ---
 - hosts: all
   sudo: true
+  roles:
+    - update
+    - common
   vars:
-    server_name: "default:80"
-    repository_url: "https://github.com/kylebebak/dronfelipe.git"
-    repository_root: /var/www/dronfelipe
-    document_root: "{{ repository_root }}/html"
-    mysql_root_password: root
     production: false
 
-  handlers:
-    - name: reload apache
-      service: name=apache2 state=reloaded
-
   tasks:
-    - name: Update apt cache
-      apt: update_cache=yes
-
     - name: Install required packages
       apt: name={{ item }} state=present
       with_items:
@@ -68,7 +59,7 @@
 
     - name: Copy across new virtual host to sites-available
       template:
-        src=templates/virtual-hosts.conf.j2
+        src=virtual-hosts.conf.j2
         dest=/etc/apache2/sites-available/vagrant.conf
 
     - name: Remove default virtual host
