--- a/deploy/main.yml
+++ b/deploy/main.yml
@@ -59,7 +59,7 @@
 
     - name: Copy across new virtual host to sites-available
       template:
-        src=virtual-hosts.conf.j2
+        src=roles/common/templates/virtual-hosts.conf.j2
         dest=/etc/apache2/sites-available/vagrant.conf
 
     - name: Remove default virtual host
