changed the way .git/hooks is managed. now hooks are copied to this directory on deployment instead of using a symlink, which means the user can easily change disable the testing hook within .git/hooks without altering the one in deploy/hooks that goes into version control

--- a/deploy/main.yml
+++ b/deploy/main.yml
@@ -48,12 +48,8 @@
         mode: u=rwx,g=rx,o=rx
         recurse: true
 
-    - name: Delete .git/hooks
-      shell: "rm -dr {{ repository_root }}/.git/hooks"
-      ignore_errors: yes
-
-    - name: Link hooks to .git/hooks
-      shell: "cd {{ repository_root }}/.git && ln -s ../deploy/hooks hooks"
+    - name: Copy hooks to .git/hooks
+      shell: "cp -p {{ repository_root }}/deploy/hooks/* {{ repository_root }}/.git/hooks"
 
 
 
