finished post on automating development, added img subdirectory to posts directory, changed htaccess to permit access to this directory

--- a/deploy/delete_post.yml
+++ b/deploy/delete_post.yml
@@ -7,7 +7,7 @@
     post: "post"
 
   tasks:
-    - name: Retrieve stuff from mysql
+    - name: Deletes post from MySQL database
       command: >
         mysql --user=root --password={{ mysql_root_password }} {{ mysql_db_name }}
         --host=localhost --batch --skip-column-names
