--- a/html/.htaccess
+++ b/html/.htaccess
@@ -3,6 +3,8 @@ Options -Multiviews
 
 RewriteRule ^posts/css/.*$ - [L]
 RewriteRule ^posts/js/.*$ - [L]
+RewriteRule ^posts/img/.*$ - [L]
+RewriteRule ^posts/img/thumbs/.*$ - [L]
 
 RewriteRule ^posts/assets/index.php - [L]
 RewriteRule ^posts/index.php - [L]
