--- a/deploy/roles/common/handlers/main.yml
+++ b/deploy/roles/common/handlers/main.yml
@@ -1,3 +1,13 @@
 ---
 - name: reload apache
   service: name=apache2 state=reloaded
+
+- name: restart nginx
+  service: name=nginx state=restarted
+
+- name: validate nginx configuration
+  command: nginx -t -c /etc/nginx/nginx.conf
+  changed_when: False
+
+- name: reload nginx
+  service: name=nginx state=reloaded
