Deleting more garbage, need to get off of Apache

--- a/dronfelipe-apache.conf
+++ b/dronfelipe-apache.conf
@@ -1,7 +1,7 @@
-<VirtualHost *:{{ dronfelipe_port }}>
-  DocumentRoot {{ document_root }}
+<VirtualHost *:8040>
+  DocumentRoot /var/www/dronfelipe/html
 
-  <Directory {{ document_root }}>
+  <Directory /var/www/dronfelipe/html>
     Options Indexes FollowSymLinks Multiviews
     MultiviewsMatch Any
     AllowOverride All
