--- a/dronfelipe-nginx.conf
+++ b/dronfelipe-nginx.conf
@@ -3,7 +3,7 @@ server {
   server_name dronfelipe.com;
 
   location / {
-    proxy_pass http://localhost:{{ dronfelipe_port }};
+    proxy_pass http://localhost:8040;
   }
 
   access_log /var/log/nginx/dronfelipe-access.log;
