--- a/dronfelipe-nginx.conf
+++ b/dronfelipe-nginx.conf
@@ -1,5 +1,5 @@
+# /etc/nginx/sites-enabled/dronfelipe.conf
 server {
-  listen 80;
   server_name dronfelipe.com;
 
   location / {
@@ -17,4 +17,23 @@ server {
 
   include /etc/nginx/mime.types;
   default_type application/octet-stream;
+
+    listen 443 ssl; # managed by Certbot
+    ssl_certificate /etc/letsencrypt/live/dronfelipe.com/fullchain.pem; # managed by Certbot
+    ssl_certificate_key /etc/letsencrypt/live/dronfelipe.com/privkey.pem; # managed by Certbot
+    include /etc/letsencrypt/options-ssl-nginx.conf; # managed by Certbot
+    ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem; # managed by Certbot
+
+}
+server {
+    if ($host = dronfelipe.com) {
+        return 301 https://$host$request_uri;
+    } # managed by Certbot
+
+
+  listen 80;
+  server_name dronfelipe.com;
+    return 404; # managed by Certbot
+
+
 }
